(executable
 (name gen_data)
 (modules
  (:standard \ mirageio_data))
 (libraries omd yaml fmt ptime)
 (preprocess
  (pps ppx_deriving_yaml)))

(library
 (name mirageio_data)
 (public_name mirageio.data)
 (libraries ptime)
 (modules mirageio_data))

(rule
 (targets mirageio_data.ml)
 (deps
  (source_tree blog/)
  (source_tree link/)
  (source_tree paper/)
  (source_tree weekly/)
  (source_tree wiki/))
 (action
  (chdir
   %{workspace_root}
   (with-stdout-to
    %{targets}
    (run data/gen_data.exe)))))
