(library
 (public_name mirageio)
 (libraries
  dream-mirage
  tcpip
  mirageio_template
  mirageio_data
  mirage-kv-mem))

(rule
 (targets asset.ml asset.mli)
 (deps
  ../asset/main.css
  (source_tree ../asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m lwt ../asset -o asset.ml))))
